tomcat-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - secretName: host.tld.tls
    hosts:
    - host.tld
  rules:
  - host: host.tld
    http:
      paths:
      - path: /
        backend:
          serviceName: tomcat
          servicePort: 8080
